--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
     "sass": "^1.69.4"
+  },
+  "scripts": {
+    "test": "echo Error: no test specified && exit 1",
+    "sass": "sass",
+    "sass:watch": "sass --watch scss/styles.scss  css/styles.css"
   }
 }
